UI update - Employee UI.